readded contrast to prevent sickness

--- a/styles/SearchResult.module.scss
+++ b/styles/SearchResult.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   flex-wrap: wrap;
 
+  background: rgba(#000, 0.1);
   backdrop-filter: blur(10px);
   margin: 1rem 0;
   padding: 1rem;
